# url-shortener

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yaml
app/: .env  Cargo.toml  Dockerfile
app/src/: main.rs
app/src/models/: http_protocol.rs  mod.rs  mongo_docs.rs
app/src/repository/: mod.rs  mongodb_repo.rs  shorten_urls_repository.rs
mongo/scripts/: init-mongo.sh
src/: main.rs
src/models/: mod.rs  mongo_docs.rs  shorten_url_request.rs
src/repository/: mongodb_repo.rs  shorten_urls_repository.rs
