[package]
name = "url-shortener"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.34.0", features = ["full"] }
hyper = { version = "1.0.1", features = ["full"]}
hyper-util = { version = "0.1.1", features = ["full"] }
http-body-util = { version = "0.1" }
nanoid = { version = "0.4.0" }
bson = "2.7.0"
serde = "1.0.193"
serde_json = { version = "1.0.108", features = [] }
time = "0.3.30"
dotenv = "0.15.0"
async-trait = "0.1.74"
log = { version = "0.4.20", features = [] }
env_logger = { version = "0.10.1", features = [] }

[dependencies.mongodb]
version = "2.7.1"
default-features = false
features = [ "tokio-runtime" ]
